Popup takes full width if needed on ios (Issue #96)

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,7 +15,7 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.alert-md .alert-wrapper {
+.alert-md .alert-wrapper, .alert-ios .alert-wrapper {
     max-width: none;
 }
 
